force-app/main/default/objects/vlocity_cmt__OrderPayment__c/vlocity_cmt__OrderPayment__c.object-meta.xml
<CustomObject>
    <description>Defines the type of payment event received from the payment gateway.</description>
    <label>Order Payment</label>
    <nameField>
        <label>Order Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>