force-app/main/default/objects/vlocity_cmt__OrderPayment__c/fields/vlocity_cmt__PaymentEventIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentEventIdentifier__c</fullName>
    <description>Payment transaction reference id</description>
    <externalId>true</externalId>
    <label>Payment Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>