force-app/main/default/objects/vlocity_cmt__OrderPayment__c/fields/vlocity_cmt__PaymentEventStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentEventStatus__c</fullName>
    <description>Status from payment gateway ex: Success or Failure</description>
    <label>Payment Event Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>