force-app/main/default/objects/vlocity_cmt__OrderPayment__c/fields/vlocity_cmt__PaymentEventType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentEventType__c</fullName>
    <description>Defines the state of this payment received from Gateway</description>
    <label>Payment Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>